templates/miscweb_template.yaml
---
# Source: miscweb/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: miscweb-release-name
  labels:
    app: miscweb
    chart: miscweb-0.2.15
    release: release-name
    heritage: Helm
spec:
  podSelector:
    matchLabels:
      app: miscweb
      release: release-name
  policyTypes:
    - Ingress
  ingress:
    - ports:
      - port: 8080
        protocol: TCP
---
# Source: miscweb/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: miscweb-release-name
  labels:
    app: miscweb
    chart: miscweb-0.2.15
    release: release-name
    heritage: Helm
spec:
  type: NodePort
  selector:
    app: miscweb
    routed_via: release-name
  ports:
    - name: http
      targetPort: 8080
      port: 8080
---
# Source: miscweb/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: miscweb-release-name
  labels:
    app: miscweb
    chart: miscweb-0.2.15
    release: release-name
    heritage: Helm
spec:
  selector:
    matchLabels:
      app: miscweb
      release: release-name
  replicas: 1
  template:
    metadata:
      labels:
        app: miscweb
        release: release-name
        routed_via: release-name
      annotations:
        checksum/secrets: 5bcb1b1f5f7f6eb861d42f07204f4090d2bfaeba2ffca78f77f4de0538d17648        
    spec:
      containers:        
        # The main application container
        - name: miscweb-release-name
          image: "docker-registry.wikimedia.org/operations-container-miscweb:production:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          livenessProbe:
            tcpSocket:
              port: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
          resources:
            requests:
              cpu: 100m
              memory: 1024Mi
            limits:
              cpu: 1
              memory: 1024Mi
                          
        # apache exporter on port 9117
        - name: miscweb-release-name-httpd-exporter
          image: docker-registry.wikimedia.org/prometheus-apache-exporter:latest
          imagePullPolicy: IfNotPresent
          args: ["-scrape_uri=http://127.0.0.1:9181/server-status"]
          ports:
            - name: httpd-metrics
              containerPort: 9117
          livenessProbe:
            tcpSocket:
              port: 9117
        
      volumes:        
          
        
        []
---
# Source: miscweb/templates/ingress.yaml
---
